# product-ner-hiring-demo

./: .gitignore  README.md  pyproject.toml
src/: config.py
src/dataset/: __init__.py
tests/: test_dataset.py
