[project]
name = "product-ner-hiring-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "modelscope[framework]>=1.30.0",
    "pandas>=2.3.3",
    "pytest>=8.4.2",
    "python-dotenv>=1.1.1",
    "tabulate>=0.9.0",
]


[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.scripts]
start = "src.main:main"
notebook = "jupyterlab.labapp:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v -s"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"